--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -62,3 +62,9 @@ body.dark-mode {
     background-color: #fff;
     color: #000;
 }
+
+@media screen and (max-width: 768px) {
+    .header-nav {
+        display: none; /* Hide the navigation for smaller screens */
+    }
+}
